--- a/client/src/app/components/login/layout/login/login.component.html
+++ b/client/src/app/components/login/layout/login/login.component.html
@@ -14,7 +14,7 @@
 </h1>
 <form [formGroup]="form" class="form" (ngSubmit)="Submit()">
     <h1>Login</h1>
-    <div class="formGroup py-14">
+    <div class="formGroup py-14 bg-orange-700 rounded-lg">
         <div class="inputDiv">
             <label>Login</label>
             <input type="text" placeholder="your login"  formControlName="userName" class="p-2 border-red-600 boredr-2">
