--- a/client/src/app/components/login/layout/register/register.component.html
+++ b/client/src/app/components/login/layout/register/register.component.html
@@ -11,6 +11,10 @@
                 <input type="text" placeholder="your surname" formControlName="surName">
             </div>
             <div class="formInputs">
+                <label>Phone</label>
+                <input type="tel" placeholder="your surname" formControlName="phone">
+            </div>
+            <div class="formInputs">
                 <label>birth</label>
                 <input type="date" formControlName="birth">
             </div>
