--- a/client/src/app/components/login/layout/register/register.component.css
+++ b/client/src/app/components/login/layout/register/register.component.css
@@ -10,7 +10,7 @@ h1{
 .formGroups{
     width: 450px;
     margin: 0 auto;
-    background-color: green;
+    background-color: orangered;
     padding: 30px;
     border-radius: 15px;
 }
