--- a/client/src/app/components/login/layout/register/register.component.html
+++ b/client/src/app/components/login/layout/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="form">
     <form [formGroup]="Forms" (ngSubmit)="register()">
         <div class="formGroups">
-            <h1 class="font-bold p-2 bg-lime-500 rounded-xl">Registration</h1>
+            <h1 class="font-bold p-2 bg-red-800 rounded-xl">Registration</h1>
             <div class="formInputs">
                 <label>Name</label>
                 <input type="text" placeholder="your name" formControlName="name">
@@ -9,10 +9,6 @@
             <div class="formInputs">
                 <label>Surname</label>
                 <input type="text" placeholder="your surname" formControlName="surName">
-            </div>
-            <div class="formInputs">
-                <label>Phone</label>
-                <input type="tel" placeholder="your surname" formControlName="phone">
             </div>
             <div class="formInputs">
                 <label>birth</label>
